adds simcards api
