# internal/servers/grpc/server.go
@@ -11,12 +11,14 @@ import (
 	applicationsv1 "github.com/onosproject/scaling-umbrella/gen/go/applications/v1"
 	devicesv1 "github.com/onosproject/scaling-umbrella/gen/go/devices/v1"
 	enterprisesv1 "github.com/onosproject/scaling-umbrella/gen/go/enterprises/v1"
+	simcardsv1 "github.com/onosproject/scaling-umbrella/gen/go/simcards/v1"
 	sitesv1 "github.com/onosproject/scaling-umbrella/gen/go/sites/v1"
 	slicesv1 "github.com/onosproject/scaling-umbrella/gen/go/slices/v1"
 	"github.com/onosproject/scaling-umbrella/internal/stores"
 	"github.com/onosproject/scaling-umbrella/internal/stores/application"
 	"github.com/onosproject/scaling-umbrella/internal/stores/device"
 	"github.com/onosproject/scaling-umbrella/internal/stores/enterprise"
+	"github.com/onosproject/scaling-umbrella/internal/stores/simcard"
 	"github.com/onosproject/scaling-umbrella/internal/stores/site"
 	"github.com/onosproject/scaling-umbrella/internal/stores/slice"
 	"google.golang.org/grpc"
@@ -36,6 +38,7 @@ type RocApiGrpcServices struct {
 	ApplicationService applicationsv1.ApplicationServiceServer
 	SiteService        sitesv1.SiteServiceServer
 	DeviceService      devicesv1.DeviceServiceServer
+	SimCardService     simcardsv1.SimCardServiceServer
 	SliceService       slicesv1.SliceServiceServer
 }
 
@@ -107,6 +110,10 @@ func NewGrpcServer(doneCh chan bool, wg *sync.WaitGroup, address string, s *stor
 	deviceServer := device.NewGrpcServer(s.Device)
 	srv.Services.DeviceService = deviceServer
 	srv.Servers = append(srv.Servers, deviceServer)
+
+	simCardServer := simcard.NewGrpcServer(s.SimCard)
+	srv.Services.SimCardService = simCardServer
+	srv.Servers = append(srv.Servers, simCardServer)
 
 	sliceServer := slice.NewGrpcServer(s.Slice)
 	srv.Services.SliceService = sliceServer
